# whitebox

./: .gitignore  Cargo.toml  README.md  SUPERCLAW_CONTRACT.md  WHITEBOX_API.md  behaviour.md  index.html  package-lock.json  package.json  summary.md  vite.config.js
cat/: README.md
docs/superpowers/specs/: 2026-03-26-whitebox-design.md
src/: animation.rs  api.rs  app.rs  assets.rs  avatar.rs  clips.rs  config.rs  events.rs  lib.rs  modes.rs  profiles.rs  reducer.rs  scene.rs  state.rs  superclaw.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-web/: avatar-contract.js  browser-runtime.js  control-policy.js  main.js  styles.css
src-web/animations/: alert.js  angry.js  curious.js  focused.js  guarded.js  neutral.js  playful.js  sad.js  stern.js  tired.js  warm.js
src/animations/: alert.rs  angry.rs  curious.rs  focused.rs  guarded.rs  mod.rs  neutral.rs  playful.rs  sad.rs  stern.rs  tired.rs  warm.rs
src/integrations/: info_feed.rs  mod.rs  superclaw.rs
src/voice/: factory.rs  mod.rs  registry.rs  types.rs
src/voice/backends/: mock.rs  mod.rs  moonshine_sidecar.rs  piper.rs  system_tts.rs  whisper.rs
tests/: control_policy.test.mjs  web_expression_contract.test.mjs  whitebox_api.rs  whitebox_state.rs
