[package]
name = "whitebox-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
image = "0.25"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
whitebox = { path = ".." }
